fix: amend height of book img to prevent overspill

--- a/style.css
+++ b/style.css
@@ -136,8 +136,9 @@ main {
   grid-column: 1 / 3;
   overflow: hidden;
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
+  object-position: center;
   transform-origin: center;
   display: block;
 }
